--- a/template/index.html
+++ b/template/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>SALUTATION</h1>
+    <div>
+        <form method="post">
+            <label for="nom">mets ton vilain nom :</label>
+            <input type="text" name="nom", id="nom";>
+            <button type="submit">Faut soumettre</button>
+        </form>
+    </div>
 </body>
 </html>
