--- a/projet_twin/twin_network/templates/form2.html
+++ b/projet_twin/twin_network/templates/form2.html
@@ -7,12 +7,31 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="\projet_twin\twin_network\static\css\form2.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
+        </style>
 </head>
 <body>
-    <div>
-        <h1></h1>
+    <div class="twin-network">
+        <h1>TWIN <br>
+        NETWORK</h1>
     </div>
-    <div></div>
+    <div class="form2">
+        <form action="">
+            <label for=""> CREATION DE COMPTE</label>
+            <label for="almuni">ALUMNI?</label>
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label" for="flexRadioDefault1">
+                  oui
+                </label>
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label" for="flexRadioDefault2">
+                    non
+                </label>
+
+              
+        </form>
+    </div>
     
 </body>
 </html>
