--- a/projet_twin/twin_network/templates/page1.html
+++ b/projet_twin/twin_network/templates/page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'acceuil</title>
-    <link rel="stylesheet" href="page1.css">
+    <link rel="stylesheet" href="\projet_twin\twin_network\static\css\page1.css">
 </head>
 <body>
     <header>
@@ -20,29 +20,36 @@
             </ul>
         </nav>
     </header>
-    <div class="description-filière">
-        <div class=image>
-            <img src="/projet_twin/twin_network/image/ESATIC-École-Supérieure-Africaine-des-Technologies-de-lInformation-et-de-la-Communication-orientation-bacheliers-Cote-divoire-2-scaled.webp" alt="image d'étudiant">
-        </div>
-        <div class="twin-definition">
-            <p>
-                La filière TWIN ( Technologie du Web et Image Numérique )
-                est une filière dediée a la formation de technicien spécialisé
-                dans la programmation web, modélisation de site  web, crétion d'image,
-                de video, dans la modélisation 3D etc.
-            </p>
-        </div>
-    </div>
-    <div class="respo-twin">
-        <div>
-            <p>
-                Monsieur CISSE Cédric :
-                    Responsable de la filière TWIN a l'ESATIC
-            </p>
-        </div>
-        <div class="photo-respo-twin">
-            <img src="" alt="Photo de Monsieur Cissé">
-        </div>       
-    </div>
+    <main>
+        <section>
+            <article class="description-filière">
+                <div class=image>
+                    <img src="/projet_twin/twin_network/image/ESATIC-École-Supérieure-Africaine-des-Technologies-de-lInformation-et-de-la-Communication-orientation-bacheliers-Cote-divoire-2-scaled.webp" alt="image d'étudiant">
+                </div>
+                <div class="twin-definition">
+                    <p>
+                        La filière TWIN ( Technologie du Web et Image Numérique )
+                        est une filière dediée a la formation de technicien spécialisé
+                        dans la programmation web, modélisation de site  web, crétion d'image,
+                        de video, dans la modélisation 3D etc.
+                    </p>
+                </div>
+            </article>
+            <article class="respo-twin">
+                <div>
+                    <p>
+                        Monsieur CISSE Cédric :
+                            Responsable de la filière TWIN a l'ESATIC
+                    </p>
+                </div>
+                <div class="photo-respo-twin">
+                    <img src="" alt="Photo de Monsieur Cissé">
+                </div>       
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 MonSiteWeb. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
