--- a/projet_twin/twin_network/templates/form2.html
+++ b/projet_twin/twin_network/templates/form2.html
@@ -12,23 +12,32 @@
         </style>
 </head>
 <body>
-    <div class="twin-network">
+    <div>
         <h1>TWIN <br>
         NETWORK</h1>
     </div>
     <div class="form2">
         <form action="">
-            <label for=""> CREATION DE COMPTE</label>
-            <label for="almuni">ALUMNI?</label>
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                  oui
-                </label>
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                <label class="form-check-label" for="flexRadioDefault2">
-                    non
-                </label>
-
+            <label for="" class="CREATION"> CREATION DE COMPTE</label>
+            <label for="oui" id="oui">oui</label>
+            <input type="radio" class="oui">
+            <label for="oui" id="non">non</label>
+            <input type="radio" class="non">
+            <section class="line"></section>
+            <label for="almuni" class="ALUMNI">ALUMNI?</label>
+            <section class="line1"></section>
+            <label for="" class="NIVEAU">NIVEAU</label>
+            <label for="" class="l1">licence1</label>
+            <input type="radio" id="l1">
+            <label for="" class="l2">licence2</label>
+            <input type="radio" id="l2">
+            <label for="" class="l3">licence3</label>
+            <input type="radio" id="l3">
+            <label for=""class="mdp">MOT DE PASSE </label>
+            <input type="password" class="mdp1">
+            <label for="" class="CONFIRMER">CONFIRMER</label>
+            <input type="password" class="cmdp">
+            <button type="submit">se connecter</button>
               
         </form>
     </div>
