--- a/projet_twin/twin_network/templates/page1.html
+++ b/projet_twin/twin_network/templates/page1.html
@@ -15,18 +15,15 @@
             <ul>
                 <li><a href="form2.html">S'inscrire</a></li>
                 <li><a href="">Se connecter</a></li> <!--la page pour se connecter n'a pas encore été créer-->
-            
-            
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <article class="description-filière">
-                <div class=image>
-                    <img src="/projet_twin/twin_network/image/ESATIC-École-Supérieure-Africaine-des-Technologies-de-lInformation-et-de-la-Communication-orientation-bacheliers-Cote-divoire-2-scaled.webp" alt="image d'étudiant">
-                </div>
                 <div class="twin-definition">
+                    <img src="/projet_twin/twin_network/image/ESATIC-École-Supérieure-Africaine-des-Technologies-de-lInformation-et-de-la-Communication-orientation-bacheliers-Cote-divoire-2-scaled.webp" alt="image d'étudiant">
+               
                     <p>
                         La filière TWIN ( Technologie du Web et Image Numérique )
                         est une filière dediée a la formation de technicien spécialisé
@@ -35,16 +32,46 @@
                     </p>
                 </div>
             </article>
-            <article class="respo-twin">
-                <div>
+            <article class="description de personnes">
+                <div class="Presentation">
                     <p>
                         Monsieur CISSE Cédric :
                             Responsable de la filière TWIN a l'ESATIC
                     </p>
-                </div>
-                <div class="photo-respo-twin">
-                    <img src="" alt="Photo de Monsieur Cissé">
+
+                   <img src="/projet_twin/twin_network/image/Capture d’écran 2024-10-13 235527.png" alt="Photo de Monsieur Cissé">
                 </div>       
+            </article>
+            <article class="description de personnes">
+                <div class="Presentation">
+                    <p>
+                        L'étudiant DAGOU ABE JEAN CHRIST a marqué la promotion IT12.Lui même originaire d'Allemagne,
+                        son parcours fut exellent et reste un exemple pour les étudiants actuels de l'ESATIC.
+                        IL remporta Trois fois l'Hackaton et pris aussi la prémière place dans la compétion en informatique d'Italie.
+                    </p>
+                    <img src="/projet_twin/twin_network/image/dagou photo.jpg" alt="photo de DAGOU">
+                </div>
+            </article>
+            <article class="description de personnes">
+                <div class="Presentation">
+                    <p>
+                        L'étudiante COULIBALY AIDA a marqué la promotion IT12. 
+                        Son parcours fut exellent et reste un exemple pour les étudiants actuels de l'ESATIC.
+                        La première a avoir décélé tous les secrets du corro. En fait le corro, c'était tout simplement elle, Coulibaly Aida.
+                    </p>
+                    <img src="" alt="photo de Aida">
+                </div>
+            </article>
+            <article class="description de personnes">
+                <div class="Presentation">
+                    <p>
+                        L'étudiante Yao Sephora a marqué la promotion IT12. 
+                        Son parcours fut exellent et reste un exemple pour les étudiants actuels de l'ESATIC.
+                        Elle est mariée avec un individu de la filière SRIT. Mais malgré cet handicap, elle est restée notre fière 'Delegate'.
+                    </p>
+                    <img src="/projet_twin/twin_network/image/sephora photo.jpg" alt="photo de Sephora">
+                </div>
+
             </article>
         </section>
     </main>
