--- a/projet_twin/twin_network/templates/form.html
+++ b/projet_twin/twin_network/templates/form.html
@@ -17,7 +17,7 @@
         <div class="right-section">
             <div class="form-container">
                 <div class="form-title">CREATION DE COMPTE</div>
-                <form>
+                <form action="form2.html", method="get">
                     <label for="nom">Nom</label>
                     <input type="text" id="nom" name="nom" required>
                     
