--- a/projet_twin/twin_network/templates/form2.html
+++ b/projet_twin/twin_network/templates/form2.html
@@ -17,7 +17,7 @@
         NETWORK</h1>
     </div>
     <div class="form2">
-        <form action="">
+        <form action="" method="post">
             <label for="" class="CREATION"> CREATION DE COMPTE</label>
             <label for="oui" id="oui">oui</label>
             <input type="radio" class="oui">
