--- a/projet_twin/twin_network/templates/page1.html
+++ b/projet_twin/twin_network/templates/page1.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="form2.html">S'inscrire</a></li>
+                <li><a href="form.html">S'inscrire</a></li>
                 <li><a href="">Se connecter</a></li> <!--la page pour se connecter n'a pas encore été créer-->
             </ul>
         </nav>
@@ -77,6 +77,7 @@
     </main>
     <footer>
         <p>&copy; 2024 MonSiteWeb. Tous droits réservés.</p>
+        
     </footer>
 </body>
 </html>
