--- a/projet_twin/projet_twin/templates/page1.html
+++ b/projet_twin/projet_twin/templates/page1.html
@@ -14,8 +14,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="form.html">S'inscrire</a></li>
-                <li><a href="">Se connecter</a></li> <!--la page pour se connecter n'a pas encore été créer-->
+                <li><a href="">S'inscrire</a></li>
+                <li><a href="{% url 'form' %}">Se connecter</a></li> <!--la page pour se connecter n'a pas encore été créer-->
             </ul>
         </nav>
     </header>
