--- a/projet_twin/projet_twin/templates/form.html
+++ b/projet_twin/projet_twin/templates/form.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Création de Compte - Twin Network</title>
-    <link rel="stylesheet" href="\projet_twin\projet_twin\static\css\form.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
     </style>
@@ -17,19 +18,36 @@
         <div class="right-section">
             <div class="form-container">
                 <div class="form-title">CREATION DE COMPTE</div>
-                <form>
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
                     <label for="nom">Nom</label>
-                    <input type="text" id="nom" name="nom" required>
-                    
+                    <input type="text" id="nom" value="{{ form.nom.value|default_if_none:'' }}" name="nom" required>
+                    <div class="error-nom">
+                        {{ form.nom.errors }}
+                        
+                    </div>
                     <label for="prenom">Prénom</label>
                     <input type="text" id="prenom" name="prenom" required>
-                    
+                    <div class="error-nom">
+                        {{ form.prenom.errors }}
+                        
+                    </div>
+               
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
-                    
+                    <div class="error-nom">
+                        {{ form.email.errors }}
+                        
+                    </div>
+                  
                     <label for="contact">Contact</label>
                     <input type="number" id="contact" name="contact" required>
-                    
+                    <div class="error-nom">
+                        {{ form.contact.errors }}
+                        
+                    </div>
+                
                     <button type="submit">Continuer</button>
                 </form>
             </div>
