--- a/projet_twin/projet_twin/templates/form2.html
+++ b/projet_twin/projet_twin/templates/form2.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="\projet_twin\projet_twin\static\css\form2.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/form2.css' %}">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
         </style>
