--- a/projet_twin/twin_network/templates/page1.html
+++ b/projet_twin/twin_network/templates/page1.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class= logo>
-            <img alt="logo des twin "> <!--pas encore de logo-->
+            <img src="/projet_twin/projet_twin/static/image/TWIN.png" alt="logo des twin "> <!--pas encore de logo-->
         </div>
         <nav>
             <ul>
@@ -17,7 +17,7 @@
                 <li><a href="">Se connecter</a></li> <!--la page pour se connecter n'a pas encore été créer-->
             </ul>
         </nav>
-    </header>
+    </header> 
     <main>
         <section>
             <article class="description-filière">
