--- a/projet_twin/projet_twin/templates/page1.html
+++ b/projet_twin/projet_twin/templates/page1.html
@@ -10,17 +10,17 @@
 <body>
     <header>
         <div class= logo>
-            <img alt="logo des twin "> <!--pas encore de logo-->
+            <img alt="logo des twin " src="{% static 'image/TWIN-removebg-preview.png' %}" class="logo" > <!--pas encore de logo-->
         </div>
         <nav>
             <ul>
-                <li><a href="">S'inscrire</a></li>
-                <li><a href="{% url 'form' %}">Se connecter</a></li> <!--la page pour se connecter n'a pas encore été créer-->
+                <li><a href="{% url 'form' %}">S'inscrire</a></li>
+                <li><a href="">Se connecter</a></li> <!--la page pour se connecter n'a pas encore été créer-->
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+       ² <section>
             <article class="description-filière">
                 <div class="twin-definition">
                     <img src="{% static 'image/ESATIC-École-Supérieure-Africaine-des-Technologies-de-lInformation-et-de-la-Communication-orientation-bacheliers-Cote-divoire-2-scaled.webp' %}" alt="image d'étudiant">
@@ -47,11 +47,12 @@
             <article class="description de personnes">
                 <div class="Presentation">
                     <p>
-                        L'étudiant DAGOU ABE JEAN CHRIST a marqué la promotion IT12.Lui même originaire d'Allemagne,
+                        L'étudiant KOBEHI ELIE ELYSEE a marqué la promotion IT12.Lui même originaire d'Allemagne,
                         son parcours fut exellent et reste un exemple pour les étudiants actuels de l'ESATIC.
                         IL remporta Trois fois l'Hackaton et pris aussi la prémière place dans la compétion en informatique d'Italie.
                     </p>
-                    <img src="% static 'image/image/dagou photo.jpg" alt="photo de DAGOU">
+                    <img src="{% static 'image/WhatsApp Image 2024-10-16 à 11.55.01_117425de.jpg' %}" alt="photo de kobehi">
+
                 </div>
             </article>
             <article class="description de personnes">
@@ -61,7 +62,7 @@
                         Son parcours fut exellent et reste un exemple pour les étudiants actuels de l'ESATIC.
                         La première a avoir décélé tous les secrets du corro. En fait le corro, c'était tout simplement elle, Coulibaly Aida.
                     </p>
-                    <img src="" alt="photo de Aida">
+                    <img src="{% static 'image/WhatsApp Image 2024-10-16 à 11.57.06_1fa4887e.jpg' %}" alt="photo de Aida">
                 </div>
             </article>
             <article class="description de personnes">
@@ -71,7 +72,7 @@
                         Son parcours fut exellent et reste un exemple pour les étudiants actuels de l'ESATIC.
                         Elle est mariée avec un individu de la filière SRIT. Mais malgré cet handicap, elle est restée notre fière 'Delegate'.
                     </p>
-                    <img src="/projet_twin/projet_twin/image/sephora photo.jpg" alt="photo de Sephora">
+                    <img src="{% static 'image/sephora photo.jpg' %}" alt="photo de Sephora">
                 </div>
 
             </article>
